client/css/editor/sidebarModules.css
/* ... */
.sidebarButton span::after {
  content: '';
  position: absolute;
  top: 100%;
  right: 10px;
  border-width: 5px;
  border-style: solid;
  border-color: var(--VTTblueDark) transparent transparent transparent;
}

.sidebarButton:hover span {
  display: block;
}

.explainer-text {
  padding: 10px;
  color: #666;
  font-style: italic;
  text-align: center;
}

body.darkMode .widget-group-header {
    background: #666;
}

.widget-group-header {
    display: flex;
    align-items: center;
    cursor: pointer;
}

.widget-group-header .group-name-input {
    flex-grow: 1;
    border: none;
    background: transparent;
    font-weight: bold;
    color: var(--textColor);
    padding: 0;
    pointer-events: none;
}

.editing .widget-group-header .group-name-input {
    pointer-events: auto;
    border: 1px solid #ccc;
    font-weight: normal;
    padding: 1px;
}

.widget-group-header .collapse-arrow, .widget-list-header .collapse-arrow {
    width: 1.2em;
    height: 1em;
    text-align: center;
}

.widget-list .new-group-drop-target {
  border: 2px dashed lightgray;
  color: lightgray;
  padding: 20px;
  text-align: center;
  margin-top: 10px;
  border-radius: 5px;
  cursor: pointer;
  line-height: 1;
  font-size: 14px;
  font-style: italic;
  height: auto;
}

.widget-list .new-group-drop-target::before {
  content: '+';
  font-style: normal;
}

.widget-list .new-group-drop-target.drag-over {
  background-color: var(--backgroundHighlightColor1);
  color: white;
}

.widget-list-header {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.widget-list-container.collapsed .widget-list {
  display: none;
}

.widget-list-header-text {
  flex-grow: 1;
}


.editing .sort-control {
  display: none;
}

.widget-list-actions {
  margin: 3px 0;
}

div.widget-grid {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  padding: 5px;
}

div.widget-grid-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 1px solid #222;
  border-radius: 3px;
  flex-basis: 100px;
  flex-grow: 0;
  flex-shrink: 0;
  position: relative;
  height: 75px;
  width: 75px;
  max-width: 75px;
}

div.widget-name {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
  font-weight: bold;
  text-shadow: 0 0 2px white;
  padding: 2px 5px;
  box-sizing: border-box;
  line-height: 1;
  background-color: #fffb;
  z-index: 1;
}

.editorModule.widgets .widget-preview {
  height: 75px;
  width: 75px;
  max-width: 75px;
  background-color: #3335;
  border-radius: 3px;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center
}

.editorModule.widgets .widget-preview img {
  max-width: 100%;
  max-height: 100%;
  height: 70px;
  object-fit: contain;
}

.editorModule.widgets .add-to-room-grid {
  position: absolute;
  top: 2px;
  right: 2px;
  height: 24px;
  width: 24px;
  padding: 0;
  z-index: 2;
}

.segmented-control {
  display: flex;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  border-color: #fff5 #0005 #0005 #fff5;
}

.segmented-control button{
  margin: 0;
  padding: 0;
  text-align: center;
  border-radius: 0;
  border-left: 1px solid #fff5;
  border-right: 1px solid #0005;
  flex-basis: 33px;
  min-width: 33px;
  flex-shrink: 0;
  justify-content: center;
  align-items: center;
  align-content: center;
  height: 34px;
}

.segmented-control button::before {
  margin: 0;
}

.segmented-control.sort-control button{
  max-height: 32px;
}

.collapsed .sort-control {
  display: none;
}

.segmented-control.sort-control .sort-label {
  padding-top: 2px;
  margin-bottom: -2px;
}



.segmented-control button:first-child {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  border-left: none;
}

.segmented-control button:last-child {
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  border-right: none;
}

.editing-widgets .widget-list li .preview-widget-label {
  display: flex;
  align-items: center;
  font-size: 10px;
  color: #ccc;
  margin-right: 5px;
  border-top: 1px solid #ccc;
}

